.github: Update labeler config
Update labeler configuration to the structure / contents of the
oer-internal-template repository. Before this, it was a copy of the CCAS
labeler configuration.

Signed-off-by: Razvan Deaconescu <razvan.deaconescu@upb.ro>

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,14 +1,8 @@
-topic/functions:
-  - chapters/functions/**/*
+topic/template-chapter:
+  - chapters/template-chapter/**/*
 
-topic/multivar-power:
-  - chapters/multivariate-to-power/**/*
-
-topic/numbers-indices:
-  - chapters/numbers-to-indices/**/*
-
-topic/vectors-matrix:
-  - chapters/vectors-matrix-ops/**/*
+topic/another-chapter:
+  - chapters/another-chapter/**/*
 
 area/reading:
   - '**/reading/*'
@@ -35,5 +29,10 @@ area/projects:
   - '**/projects/**/*'
 
 area/infra:
+  - 'scripts/*'
   - 'scripts/**/*'
+  - '.github/*'
   - '.github/**/*'
+  - 'Dockerfile'
+  - 'Makefile'
+  - 'config.yaml'
